@@ -31,6 +31,11 @@ Deferred Whishlist:
 ------------------------------------------------------------------------------
 SuRun Changes:
 ------------------------------------------------------------------------------
+SuRun 1.2.1.0 Beta 2 - 2011-02-01
+---------------------------------
+* FIX: If SuRun starts %windir%\system32\cmd.exe it inserts a /D option into 
+  the command line to avoid cmd from running AutoRuns
+
 SuRun 1.2.1.0 Beta 1 - 2011-02-01
 ---------------------------------
 * IAT-Hooks are directly loaded without a separate thread.
